# whistle

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG_v2.rst  LICENSE  Makefile  Projectfile  README.rst  RELEASE.rst  classifiers.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
config/: conda.yml
doc/: Makefile  conf.py
docs/: Makefile  asynchronous.rst  concepts.rst  conf.py  custom_events.rst  getting_started.rst  index.rst  install.rst  installation.rst  introduction.rst  listener_management.rst  make.bat  patterns.rst  priorities.rst  propagation.rst  recipes.rst  reference.rst  release.rst  synchronous.rst
docs/_templates/: base.html  index.html  page.html  sidebarintro.html  sidebarlogo.html
docs/reference/: whistle.dispatchers.asynchronous.rst  whistle.dispatchers.base.rst  whistle.dispatchers.rst  whistle.dispatchers.synchronous.rst  whistle.errors.rst  whistle.event.rst  whistle.listeners.rst  whistle.rst  whistle.typing.dispatcher.rst  whistle.typing.event.rst  whistle.typing.listener.rst  whistle.typing.rst
edgy/event/: __init__.py  dispatcher.py  event.py
examples/: example_01_basic_sync.py  example_02_sync_multiple_listeners.py  example_03_sync_decorator.py  example_04_basic_async.py  example_05_async_io_operations.py  example_06_priorities.py  example_07_propagation.py  example_08_custom_event.py  example_09_listener_management.py  example_10_patterns.py
tests/: test_basic.py  test_examples.py  test_listeners_collection.py  test_sync_async.py  test_version.py
tests/edgy/event/: test_basic.py
whistle/: __init__.py  _version.py  dispatcher.py  errors.py  event.py  listeners.py  protocols.py
whistle/dispatchers/: __init__.py  asynchronous.py  base.py  synchronous.py
whistle/event/: dispatcher.py  event.py
whistle/typing/: __init__.py  dispatcher.py  event.py  listener.py
