[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "whistle"
version = "2.0.0"
description = "Event dispatcher (see python-whistle.github.io)."
authors = ["Romain Dorgueil <romain@makersquad.fr>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.3"
pre-commit = "^3.7.1"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
sphinx = "^7.3.7"
pytest-benchmark = "^4.0.0"
furo = "^2024.5.6"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.6.0"
sphinx-sitemap = "^2.6.0"
sphinxcontrib-jquery = "^4.1"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
py_version = 311
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
