[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whistle"
version = "2.1.0-rc6"
description = "Event dispatcher (see python-whistle.github.io)."
authors = [
    {name = "Romain Dorgueil", email = "romain@makersquad.fr"}
]
readme = "README.rst"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7,<8",
    "furo>=2025,<2026",
    "pre-commit>=4,<5",
    "pytest-asyncio>=1.2,<1.3",
    "pytest-benchmark>=5.1,<6",
    "pytest-cov>=7,<8",
    "pytest>=8,<9",
    "ruff>=0.14,<0.15",
    "sphinx-autobuild>=2024,<2026",
    "sphinx-copybutton>=0.5,<0.6",
    "sphinx-design>=0.6,<0.7",
    "sphinx-sitemap>=2.9,<3",
    "sphinx>=8,<9",
    "sphinxcontrib-jquery>=4.1,<4.2",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["F403"]  # Allow star imports for public API exposure

[tool.ruff.lint.isort]
known-first-party = ["whistle"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
